Adiciona estilizações iniciais com ajuda de sugestões do ChatGPT

--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Alan Dias</title>
-        <meta name="description" content="">
+        <meta name="Portfólio pessoal de Alan Dias" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
+         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <img src="alan-dias-jul-23.png" width="300 px">
         <h1>Alan Dias</h1>
         <h2>I love building digital products that solves real problems</h2>
-        <p>Experiência com</p>
-        <ul>
-            <li>Product Management</li>
-            <li>UX</li>
-            <li>Data Analytics</li>
-            <li>Business</li>
-        </ul>
-         <p>Born in Fortaleza, Ceará, Brazil</p>
+        <p>Aereas of expertise: Product Management, UX, Data Analytics, Business, Web Dev</p>
+        <p>Background: Product Manager @Trybe, Mechanical Engineer @ITA</p>
+        <p>Public Projects:  <a href="https://medium.com/@aamdias"> Medium</a> </p>
+        <p>Born in Fortaleza, Ceará, Brazil</p>
     </body>
 </html>
