Inclui propriedades de box model para os itens da área de experiência, background e projetos públciso. Inclui hover effect e mais customizações em forma de media queries

--- a/index.html
+++ b/index.html
@@ -13,9 +13,30 @@
         <img src="alan-dias-jul-23.png" width="300 px">
         <h1>Alan Dias</h1>
         <h2>I love building digital products that solves real problems</h2>
-        <p>Aereas of expertise: Product Management, UX, Data Analytics, Business, Web Dev</p>
-        <p>Background: Product Manager @Trybe, Mechanical Engineer @ITA</p>
-        <p>Public Projects:  <a href="https://medium.com/@aamdias"> Medium</a> </p>
+        <div>
+            <h3>Areas of Expertise </h3>
+            <div class="area-expertise-container">
+                <div class = "area-expertise-item">Product Management</div>
+                <div class = "area-expertise-item">UX</div>
+                <div class = "area-expertise-item">Data Analytics</div>
+                <div class = "area-expertise-item">Business</div>
+                <div class = "area-expertise-item">Web Dev</div>
+            </div>
+        </div>
+        <div>
+            <h3>Previous experience </h3>
+            <div class="area-expertise-container">
+                <div class = "area-expertise-item">Product Manager @Trybe</div>
+                <div class = "area-expertise-item">Mechanical Engineer @ITA</div>
+        </div>
+        <div>
+            <h3>Public projects </h3>
+            <div class="area-expertise-container">
+                <a href="https://medium.com/@aamdias" class="medium-link">
+                    <div class="area-expertise-item">Medium</div>
+                </a>
+            </div>
+        </div>
         <p>Born in Fortaleza, Ceará, Brazil</p>
     </body>
 </html>
